--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,10 @@ rsconnect/
 */_targets/
 election/majorCityMayor.xls
 *.xls
+daytour/R/Untitled/IMG_0185.png
+daytour/R/Untitled/IMG_0183.png
+daytour/R/Untitled/IMG_0187.png
+daytour/R/Untitled/IMG_0176.png
+daytour/R/Untitled/IMG_0195.png
+daytour/Rplot.png
+daytour/Rplot01.png
